<resources>
    <string name="error_1_string">Oops! Something went wrong :(</string>
    <string name="error_2_string">" Unused by now"</string>
    <string name="max_level_string">LEVEL:</string>
    <string name="max_level_placeholder" translatable="false">100%</string>
    <string name="current_level_string">CURRENT LEVEL</string>
    <string name="open_completely_string">OPEN</string>
    <string name="close_completely_string">CLOSE</string>
    <string name="blinds_percentage_text">LEVEL</string>
    <string name="status_placeholder">CLOSING…</string>
    <string name="already_fully_open_string">Already fully open!</string>
    <string name="already_fully_closed_string">Already fully closed!</string>
    <string name="opening_string">Opening…</string>
    <string name="closing_string">Closing…</string>
    <string name="new_max_level_set_at_string">New  level set at</string>
    <string name="finished_opening_string">Finished opening!</string>
    <string name="finished_closing_string">Finished closing!</string>
    <string name="speaker_placeholder" translatable="false"> - </string>
    <string name="speaker_placeholder_2" translatable="false">-:--</string>
    <string name="next_genre_string">NEXT GEN.</string>
    <string name="fridge_temp_string">FRIDGE TEMP.:</string>
    <string name="freezer_temp_string">FREEZER TEMP.:</string>
    <string name="mode_string">MODE:</string>
    <string name="celsius_string" translatable="false">º C</string>
    <string-array name="fridge_temps">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="freezer_temps">
        <item>-20</item>
        <item>-19</item>
        <item>-18</item>
        <item>-17</item>
        <item>-16</item>
        <item>-15</item>
        <item>-14</item>
        <item>-13</item>
        <item>-12</item>
        <item>-11</item>
        <item>-10</item>
        <item>-9</item>
        <item>-8</item>
    </string-array>
    <string-array name="refrigerator_modes">
        <item>DEFAULT</item>
        <item>VACATION</item>
        <item>PARTY</item>
    </string-array>
    <string name="dispense_exact_amount_string">DISPENSE EXACT AMOUNT</string>
    <string name="cancel_string">CANCEL</string>
    <string name="stop_string">STOP</string>
    <string name="amount_hint_string">AMOUNT</string>
    <string-array name="units">
        <item>ml</item>
        <item>cl</item>
        <item>dl</item>
        <item>l</item>
        <item>dal</item>
        <item>hl</item>
        <item>kl</item>
    </string-array>
    <string name="opening_faucet_string">Faucet opened</string>
    <string name="closing_faucet_string">Faucet closed</string>
    <string name="enter_amount_string">You must enter an amount!</string>
    <string name="cant_be_nothing_string">You can\'t dispense nothing!</string>
    <string name="dispensing_string">Dispensing</string>
    <string name="dispensed_string_1">Dispensed</string>
    <string name="dispensed_string_2">of</string>
    <string name="lock_string">LOCK</string>
    <string name="unlock_string">UNLOCK</string>
    <string name="opening_door_string">Door opened</string>
    <string name="closing_door_string">Door closed</string>
    <string name="locking_door_string">Door locked</string>
    <string name="unlocking_door_string">Door unlocked</string>
    <string name="vacuum_string">VACUUM</string>
    <string name="mop_string">MOP</string>
    <string name="pause_string">PAUSE</string>
    <string name="dock_string" translatable="false">DOCK</string>
    <string name="location_string">LOCATION</string>
    <string name="battery_placeholder">BATTERY: 100%</string>
    <string name="battery_string">Battery:</string>
    <string name="charging_string">Charging…</string>
    <string name="mode_changed_string">Mode changed!</string>
    <string name="status_changed_string">Status changed!</string>
    <string name="battery_too_low_to_start_string">Can\'t start, battery is too low :(</string>
    <string name="changed_vacuum_location_string">Location changed to</string>
    <string name="on_string">ON</string>
    <string name="off_string">OFF</string>
    <string name="brightness_string">INTENSITY:</string>
    <string name="color_string" translatable="false">COLOR:</string>
    <string name="brightness_placeholder" translatable="false">100</string>
    <string name="color_changed_string">Color changed!</string>
    <string name="intensity_set_to_string">Intensity set to</string>
    <string name="turned_on_string">Turned on!</string>
    <string name="turned_off_string">Turned off!</string>
    <string name="add_new_device_string">Add new device</string>
    <string name="choose_device_name_string">How do you want to call it?</string>
    <string name="new_name_string">New name</string>
    <string name="door_string">Door</string>
    <string name="faucet_string">Faucet</string>
    <string name="blinds_string">Blinds</string>
    <string name="speaker_string">Speaker</string>
    <string name="refrigerator_string">Refrigerator</string>
    <string name="vacuum_string_2">Vacuum</string>
    <string name="light_string">Light</string>
    <string name="add_new_device_button_string">Add</string>
    <string name="add_new_routine_string">Add new routine</string>
    <string name="choose_routine_name_string">How do you want to call it?</string>
    <string name="choose_a_device_string">Choose a device</string>
    <string name="add_action_string">Add Action</string>
    <string name="add_new_routine_button_string">Add routine</string>
    <string name="add_new_room_string">Add new room</string>
    <string name="choose_room_name_string">Which room is it?</string>
    <string name="add_new_home_string">Add New Home</string>
    <string name="choose_home_name_string">Which home is it?</string>
    <string name="edit_profile_string">Edit profile</string>
    <string name="settings_string">Settings</string>
    <string name="faq_string">FAQ</string>
    <string name="about_us_string">About us</string>
    <string name="log_out_string">Log out</string>
    <string name="no_homes_string">You don\'t have any homes!\n Press the + button to add one :)</string>
    <string name="failed_to_get_homes_string">Could not recover homes</string>
    <string name="home_name_placeholder">Home Name</string>
    <string name="multiple_rooms_inside_string">rooms inside</string>
    <string name="one_room_inside_string">room inside</string>
    <string name="room_name_placeholder">Room Name</string>
    <string name="multiple_devices_inside_string">devices inside</string>
    <string name="one_device_inside_string">device inside</string>
    <string name="routine_name_placeholder">Routine name</string>
    <string name="device_name_placeholder">Device name</string>
    <string name="failed_to_get_devices_string">Could not recover devices!</string>
    <string name="try_again_string">Try again</string>
    <string name="no_devices_string">You don\'t have any devices!\n Press the + button to add one :)</string>
    <string name="placeholder_string" translatable="false">Placeholder</string>
    <string name="failed_to_get_rooms_string">Could not recover rooms!</string>
    <string name="no_rooms_string">You don\'t have any rooms!\n Press the + button to add one :)</string>
    <string name="blinds_closed_title_string">Blinds closed!</string>
    <string name="blinds_closed_text_string">Your blinds have been closed</string>
    <string name="blinds_opened_title_string">Blinds opened!</string>
    <string name="blinds_opened_text_string">Your blinds have been opened</string>
    <string name="warning_string">Warning!</string>
    <string name="battery_low_text_string">Your vacuum has low battery</string>
    <string name="battery_critical_text_string">Your vacuum has critically low battery</string>
    <string name="notification_channel_name_string" translatable="false">mainChannel</string>
    <string name="notification_channel_description_string" translatable="false">Channel for all the app\'s notifications</string>
    <string name="notification_channel_id_string" translatable="false">jifUltraId</string>
    <string name="name_lenght_string">The name must be between 3 and 25 characters long</string>
    <string name="name_characters_string">Only numbers, letters, spaces or _</string>
    <string name="device_type_not_selected_string">You must select a type</string>
    <string name="couldnt_add_device_string">We couldn\'t add the device :(</string>
    <string name="renamed_to_string">renamed to</string>
    <string name="device_added_string">Device added!</string>
    <string name="device_deleted_string">Device deleted!</string>
    <string name="couldnt_delete_device_string">We couldn\'t delete the device :(</string>
    <string name="couldnt_load_device_string">We couldn\'t load the device :(</string>
    <string name="couldnt_add_home_string">We couldn\'t add the home :(</string>
    <string name="delete_home_confirmation_string">Are you sure you want to delete this home?</string>
    <string name="home_added_string">Home added!</string>
    <string name="home_deleted_string">Home deleted!</string>
    <string name="couldnt_delete_home_string">We couldn\'t delete the home :(</string>
    <string name="couldnt_add_room_string">We couldn\'t add the room :(</string>
    <string name="delete_room_confirmation_string">Are you sure you want to delete this room?</string>
    <string name="room_added_string">Room added!</string>
    <string name="room_deleted_string">Room deleted!</string>
    <string name="couldnt_delete_room_string">We couldn\'t delete the room :(</string>
    <string name="delete_routine_confirmation_string">Are you sure you want to delete this routine?</string>
    <string name="routine_added_string">Routine added!</string>
    <string name="routine_deleted_string">Routine deleted!</string>
    <string name="couldnt_delete_routine_string">We couldn\'t delete the routine :(</string>
    <string name="routine_executed_string">Routine executed!</string>
    <string name="failed_string">-> Failed!</string>
    <string name="success_string">-> Success!</string>
    <string name="close_string">CLOSE</string>
    <string name="open_string">OPEN</string>
    <string name="start_string">START</string>
    <string name="undo_string">Undo</string>
    <string name="close_lowercase_string">Close</string>
    <string name="app_name">UltraHome</string>
    <string name="title_homes">Homes</string>
    <string name="title_profile">Profile</string>
    <string name="title_routines">Routines</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_devices">Devices</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="done_button">Done</string>
    <string name="routine_description">Routine description:</string>
    <string name="execute_button">Execute</string>
    <string name="routine_fail_execute">This routine wants to access a deleted device\nImposible to execute! Needs to be removed.</string>
    <string name="click_to_open">Click to open</string>
    <string name="could_not_recover_routines">Could not recover routines!</string>
    <string name="zero_routines">You don\'t have any routines!</string>
    <string name="handle_unexpected_error">Oops! There\'s a problem on our side :(</string>
    <string name="delete_device_confirmation_string">Are you sure you want to delete this device?</string>
</resources>