<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_homes">

    <fragment
        android:id="@+id/navigation_homes"
        android:name="com.example.ultrahome.ui.homes.HomesFragment"
        android:label="@string/title_homes"
        tools:layout="@layout/fragment_homes">
        <action
            android:id="@+id/action_HomesFragment_to_RoomsFragment"
            app:destination="@+id/navigation_rooms" />
    </fragment>

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.example.ultrahome.ui.rooms.RoomsFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_rooms">
        <action
            android:id="@+id/action_RoomsFragment_to_DevicesListFragment"
            app:destination="@+id/navigation_devices"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.example.ultrahome.ui.devices.DevicesListFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices_list">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ultrahome.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="com.example.ultrahome.ui.routines.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routines"/>
</navigation>
