<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_add_room_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_new_room_string"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_add_room_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_room_name_string"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/dialog_add_room_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_room_title" />

    <EditText
        android:id="@+id/room_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/new_name_string"
        android:maxLength="65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_room_subtitle" />

    <TextView
        android:id="@+id/dialog_add_room_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="@+id/room_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/room_name_edit_text" />

    <LinearLayout
        android:id="@+id/add_room_buttom_pair"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_room_error_message">

        <Button
            android:id="@+id/button_add_room"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_device_button_string" />

        <Button
            android:id="@+id/button_close_add_room_dialog"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_string" />
    </LinearLayout>

    <include
        android:id="@+id/loadingAddingRoom"
        layout="@layout/loading_circle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_room_error_message"/>

</androidx.constraintlayout.widget.ConstraintLayout>